HV-1617 Remove JDK 9 JVM arguments that are now useless for patch-gen